--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         
         <!-- contacts -->
         <address>
-            г. Киев, пр-т Леси Украинки, 26</li>
+            г. Киев, пр-т Леси Украинки, 26
         </address>
 
         <address>
